# pydantic-sqlalchemy

./: pyproject.toml
pydantic_sqlalchemy/: main.py
