[tool.poetry]
name = "pydantic-sqlalchemy"
version = "0"
description = "Tools to convert SQLAlchemy models to Pydantic models"
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.0b2"
pydantic = "^1.10.2"

# Local development dependencies
jupyter = {version = "^1.0.0", optional = true, extras = ["dev"]}
autoflake = {version = "^1.3.1", optional = true, extras = ["dev"]}
flake8 = {version = "^3.7.9", optional = true, extras = ["dev"]}


[tool.poetry.dev-dependencies]
black = "^22.10"
isort = "^5.10.1"
pytest = "^7.1"

[tool.poetry.extras]

dev = ["autoflake", "flake8", "jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"
